Wrote a short program to generate data

--- a/Genetic Algorithms/source/makefile
+++ b/Genetic Algorithms/source/makefile
@@ -15,17 +15,24 @@ FLAGS = -Wall -Werror -g
 
 # generic compilation
 
-all: geneticAlgorithm
+all: geneticAlgorithm generateData
+
+generateData: generateData.o
+	$(CC) $(FLAGS) -o generateData generateData.o
+	$(RM) *.o
 
 geneticAlgorithm: geneticAlgorithm.o
 	$(CC) $(FLAGS) -o geneticAlgorithm geneticAlgorithm.o
 	$(RM) *.o
 
-hopfieldNet.o: geneticAlgorithm.cpp
+generateData.o: generateData.cpp
+	$(CC) $(FLAGS) -c generateData.cpp
+
+geneticAlgorithm.o: geneticAlgorithm.cpp
 	$(CC) $(FLAGS) -c geneticAlgorithm.cpp
 
 clean:
-	$(RM) *.o geneticAlgorithm
+	$(RM) *.o geneticAlgorithm generateData
 
 clean-data:
 	$(RM) ../data/*
